# MLOps

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.mlflow  LICENSE  MANUAL_USUARIO.md  README.md  USER_MANUAL.md  docker-compose.yml  pyproject.toml  run_pipeline.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.fastapi  Dockerfile.mlflow  docker-compose.yml  entrypoint-mlflow.sh  pyproject.toml  run_pipeline.py
backend/data/: test.ipynb
backend/src/: __init__.py  main.py
backend/src/custom_scripts/: data_preprocessing_script.py  training_script.py  training_script_original.py
backend/src/flows/: __init__.py  prediction_flow.py  test_preprocessing.py  training_flow.py
backend/src/routers/: files.py  files_router.py  models_router.py  predictions.py
backend/src/schemas/: model_schemas.py
backend/src/services/: ml_model_service.py
backend/src/training_script/: training_script.py  training_script_original.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/config/: ThemeContext.jsx  theme.js
frontend/src/hooks/: redux.js  useBreakpoint.js
frontend/src/services/: api.js  fileService.js  modelService.js  predictionService.js
frontend/src/store/: index.js
init-db/: 01-init.sql
src/: main.py
src/flows/: training_flow.py  training_script.py
src/routers/: models.py  models_router.py
src/services/: ml_model_service.py
src/training_script/: training_script.py  training_script_auto_refactor.py
(+25 files in other folders)
