[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "MLOps research project"
authors = ["Emmanuel Arizabaleta <emmanuel.arizabaleta@udea.edu.co>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.10.0"
prefect = "^2.14.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
matplotlib = "^3.8.0"
joblib = "^1.3.0"
boruta = "^0.3"
tpot = "^0.12.1"
seaborn = "^0.13.0"
pydot = "^1.4.2"
Pillow = "^10.1.0"
tk = "^0.1.0"
setuptools = "^78.1.0"
openpyxl = "^3.1.2"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 